Fix spacing of footer

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -4,7 +4,6 @@
 
 body {
   background-color: #f0f0f0;
-  margin-bottom: 150px;
 }
 
 .footer {
